--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>I'm Nina.</p>
 
 <script type="text/javascript" id="hexo.configurations">
     var NexT = window.NexT || {};
